--- a/css/main.scss
+++ b/css/main.scss
@@ -94,9 +94,127 @@ textarea {
   padding: 0.2em 0;
 }
 
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
+/* Fonts & Colors */
+
+
+/* Main Styles */
+html {
+  margin: 0;
+  padding: 0;
+}
+.content-wrapper {
+  margin: 0px 80px;
+}
+/* Header */
+header .content-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 40%;
+}
+nav ul {
+  li {
+    display: inline-block;
+    list-style-type: none;
+  }
+}
+/* Hero */
+
+#hero .content-wrapper {
+  padding-top: 50px;
+  width: 40%;
+}
+
+/* My Work */
+
+#my-work {
+  .content-wrapper {
+    padding-top: 150px;
+  }
+  h1 {
+    padding-bottom: 50px;
+    text-align: center;
+  }
+  .work-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center;
+    article {
+      padding-bottom: 100px;
+      width: 40%;
+    }
+    article:nth-child(1) {
+      order: 2;
+    }
+    article:nth-child(2) {
+      order: 1;
+    }
+    article:nth-child(3) {
+      order: 2;
+    }
+    article:nth-child(4) {
+      order: 3;
+    }
+    article:nth-child(5) {
+      order: 6;
+    }
+    article:nth-child(6) {
+      order: 5;
+    }
+    article:nth-child(7) {
+      order: 6;
+    }
+    article:nth-child(8) {
+      order: 7;
+    }
+
+  }
+
+}
+
+/* Services */
+
+#services {
+  h1 {
+    padding-bottom: 50px;
+    text-align: center;
+  }
+  h2 {
+    text-align: center;
+  }
+  .content-wrapper {
+    padding-top: 150px;
+  }
+  .services-content {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    text-align: center;
+    article {
+      padding-bottom: 100px;
+      width: 40%;
+    }
+    p {
+      text-align: justify;
+    }
+  }
+}
+
+/* Footer */
+
+footer {
+  padding-top: 150px;
+  text-align: center;
+  .social-media {
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-around;
+    width: 30%;
+  }
+}
+
 
 /* ==========================================================================
    Helper classes
