Added desktop styles/adjusted mobile styles

--- a/css/main.css
+++ b/css/main.css
@@ -91,16 +91,21 @@ header .content-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 40%; }
+  padding: 20px 0px;
+  width: 60%; }
 
 nav ul li {
-  display: inline-block;
+  display: block;
   list-style-type: none; }
 
 /* Hero */
-#hero .content-wrapper {
-  padding-top: 50px;
-  width: 40%; }
+#hero {
+  background: url("../img/hero.png");
+  background-size: cover;
+  height: 450px; }
+  #hero .content-wrapper {
+    padding-top: 50px;
+    width: 40%; }
 
 /* My Work */
 #my-work .content-wrapper {
@@ -110,29 +115,14 @@ nav ul li {
   text-align: center; }
 #my-work .work-container {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   text-align: center; }
   #my-work .work-container article {
     padding-bottom: 100px;
-    width: 40%; }
-  #my-work .work-container article:nth-child(1) {
-    order: 2; }
-  #my-work .work-container article:nth-child(2) {
-    order: 1; }
-  #my-work .work-container article:nth-child(3) {
-    order: 2; }
-  #my-work .work-container article:nth-child(4) {
-    order: 3; }
-  #my-work .work-container article:nth-child(5) {
-    order: 6; }
-  #my-work .work-container article:nth-child(6) {
-    order: 5; }
-  #my-work .work-container article:nth-child(7) {
-    order: 6; }
-  #my-work .work-container article:nth-child(8) {
-    order: 7; }
+    width: 100%; }
 
 /* Services */
 #services h1 {
@@ -144,12 +134,13 @@ nav ul li {
   padding-top: 150px; }
 #services .services-content {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   flex-wrap: wrap;
   text-align: center; }
   #services .services-content article {
     padding-bottom: 100px;
-    width: 40%; }
+    width: 100%; }
   #services .services-content p {
     text-align: justify; }
 
@@ -163,6 +154,56 @@ footer {
     justify-content: space-around;
     width: 30%; }
 
+/* Desktop Styles */
+@media (min-width: 1200px) {
+  /* Navigation */
+  header .content-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0px;
+    width: 40%; }
+
+  nav ul li {
+    display: inline-block;
+    list-style-type: none; }
+
+  /* My Portfolio */
+  #my-work .work-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    text-align: center; }
+    #my-work .work-container article {
+      padding-bottom: 100px;
+      width: 40%; }
+    #my-work .work-container article:nth-child(1) {
+      order: 2; }
+    #my-work .work-container article:nth-child(2) {
+      order: 1; }
+    #my-work .work-container article:nth-child(3) {
+      order: 2; }
+    #my-work .work-container article:nth-child(4) {
+      order: 3; }
+    #my-work .work-container article:nth-child(5) {
+      order: 6; }
+    #my-work .work-container article:nth-child(6) {
+      order: 5; }
+    #my-work .work-container article:nth-child(7) {
+      order: 6; }
+    #my-work .work-container article:nth-child(8) {
+      order: 7; }
+
+  /* Services */
+  #services .services-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    text-align: center; }
+    #services .services-content article {
+      padding-bottom: 100px;
+      width: 40%; } }
 /* ==========================================================================
    Helper classes
    ========================================================================== */
