--- a/css/main.scss
+++ b/css/main.scss
@@ -110,23 +110,26 @@ header .content-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 40%;
-}
-nav ul {
-  li {
-    display: inline-block;
-    list-style-type: none;
+  padding: 20px 0px;
+  width: 60%;
   }
+  nav ul {
+    li {
+      display: block;
+      list-style-type: none;
+    }
 }
 /* Hero */
-
-#hero .content-wrapper {
-  padding-top: 50px;
-  width: 40%;
+#hero {
+  background: url('../img/hero.png');
+  background-size: cover;
+  height: 450px;
+  .content-wrapper {
+    padding-top: 50px;
+    width: 40%;
+  }
 }
-
 /* My Work */
-
 #my-work {
   .content-wrapper {
     padding-top: 150px;
@@ -137,45 +140,18 @@ nav ul {
   }
   .work-container {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     text-align: center;
     article {
       padding-bottom: 100px;
-      width: 40%;
+      width: 100%;
     }
-    article:nth-child(1) {
-      order: 2;
-    }
-    article:nth-child(2) {
-      order: 1;
-    }
-    article:nth-child(3) {
-      order: 2;
-    }
-    article:nth-child(4) {
-      order: 3;
-    }
-    article:nth-child(5) {
-      order: 6;
-    }
-    article:nth-child(6) {
-      order: 5;
-    }
-    article:nth-child(7) {
-      order: 6;
-    }
-    article:nth-child(8) {
-      order: 7;
-    }
-
   }
-
 }
-
 /* Services */
-
 #services {
   h1 {
     padding-bottom: 50px;
@@ -189,21 +165,20 @@ nav ul {
   }
   .services-content {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     flex-wrap: wrap;
     text-align: center;
     article {
       padding-bottom: 100px;
-      width: 40%;
+      width: 100%;
     }
     p {
       text-align: justify;
     }
   }
 }
-
 /* Footer */
-
 footer {
   padding-top: 150px;
   text-align: center;
@@ -215,6 +190,75 @@ footer {
   }
 }
 
+/* Desktop Styles */
+
+@media (min-width: 1200px) {
+  /* Navigation */
+  header .content-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0px;
+    width: 40%;
+    }
+    nav ul {
+      li {
+        display: inline-block;
+        list-style-type: none;
+      }
+  }
+  /* My Portfolio */
+  #my-work {
+    .work-container {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      text-align: center;
+      article {
+        padding-bottom: 100px;
+        width: 40%;
+      }
+      article:nth-child(1) {
+        order: 2;
+      }
+      article:nth-child(2) {
+        order: 1;
+      }
+      article:nth-child(3) {
+        order: 2;
+      }
+      article:nth-child(4) {
+        order: 3;
+      }
+      article:nth-child(5) {
+        order: 6;
+      }
+      article:nth-child(6) {
+        order: 5;
+      }
+      article:nth-child(7) {
+        order: 6;
+      }
+      article:nth-child(8) {
+        order: 7;
+      }
+    }
+  }
+  /* Services */
+  #services {
+    .services-content {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      text-align: center;
+      article {
+        padding-bottom: 100px;
+        width: 40%;
+      }
+    }
+  }
+}
 
 /* ==========================================================================
    Helper classes
