--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ textarea {
   color: #000;
   padding: 0.2em 0; }
 
-/* Fonts & Colors */
+/* SASS Variables */
 /* Main Styles */
 html {
   margin: 0;
@@ -108,7 +108,7 @@ span {
 .button-container {
   margin-top: 35px; }
 
-.gradient-button {
+.white-button {
   background: white;
   border: 2px solid white;
   color: #ff8581;
@@ -117,7 +117,7 @@ span {
   text-decoration: none;
   text-transform: uppercase; }
 
-.gradient-button:hover {
+.white-button:hover {
   background: none;
   color: white;
   transition: 1s background, color; }
@@ -169,41 +169,69 @@ header nav ul a:visited {
     text-align: justify; }
 
 /* My Work */
-#my-work .content-wrapper {
-  padding-top: 150px; }
-#my-work h1 {
-  padding-bottom: 50px;
-  text-align: center; }
-#my-work .work-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  text-align: center; }
-  #my-work .work-container article {
-    padding-bottom: 100px;
-    width: 100%; }
+#my-work {
+  background: white; }
+  #my-work .content-wrapper {
+    padding-top: 50px; }
+  #my-work h1 {
+    padding-bottom: 50px;
+    text-align: center; }
+  #my-work span {
+    color: #27746b; }
+  #my-work hr {
+    border-top: 2px solid #ff8581;
+    margin: 0 auto;
+    width: 200px; }
+  #my-work .work-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center; }
+    #my-work .work-container article {
+      padding-bottom: 50px;
+      width: 100%; }
+    #my-work .work-container img {
+      border-radius: 10px;
+      width: 100%; }
+    #my-work .work-container a:link,
+    #my-work .work-container a:visited {
+      color: black;
+      font-weight: 600;
+      text-decoration: none; }
+    #my-work .work-container a:hover {
+      border-bottom: 2px solid #27746b; }
 
 /* Services */
-#services h1 {
-  padding-bottom: 50px;
-  text-align: center; }
-#services h2 {
-  text-align: center; }
-#services .content-wrapper {
-  padding-top: 150px; }
-#services .services-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  text-align: center; }
-  #services .services-content article {
-    padding-bottom: 100px;
-    width: 100%; }
-  #services .services-content p {
-    text-align: justify; }
+#services {
+  background: #27746b; }
+  #services h1 {
+    padding-bottom: 50px;
+    text-align: center; }
+  #services h2 {
+    text-align: center; }
+  #services .content-wrapper {
+    padding-top: 50px; }
+  #services .services-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    text-align: center; }
+    #services .services-content article {
+      padding-bottom: 100px;
+      width: 100%; }
+    #services .services-content p {
+      text-align: justify; }
+    #services .services-content i {
+      color: #ff8581;
+      padding-bottom: 10px; }
+    #services .services-content h2 {
+      color: white; }
+    #services .services-content span {
+      color: white;
+      border-bottom: 2px solid #ff8581; }
 
 /* Footer */
 footer {
