--- a/css/main.scss
+++ b/css/main.scss
@@ -104,7 +104,7 @@ $pink: #ff8581;
 
 $pink-border: 2px solid $pink;
 
-/* Main Styles */
+/* Universal Styles */
 html {
   margin: 0;
   padding: 0;
@@ -131,6 +131,7 @@ h4 {
 span {
   color: $pink;
 }
+/* Buttons*/
 .button-container {
   margin-top: 35px;
 }
@@ -148,13 +149,29 @@ span {
   color: white;
   transition: 1s background, color;
 }
+.pink-button {
+  background: $pink;
+  border: 2px solid $pink;
+  color: white;
+  font-size: .75rem;
+  padding: 10px 25px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.pink-button:hover {
+  background: white;
+  border: 2px solid $pink;
+  color: $pink;
+  transition: 1s background, color;
+}
 /* Header */
 header {
+  background: $sea-green;
   .logo i {
-    color: black;
+    color: white;
   }
   i:hover {
-    color: $sea-green;
+    color: $pink;
     transition: 1s color;
   }
   .content-wrapper {
@@ -278,15 +295,9 @@ header {
       padding-bottom: 100px;
       width: 100%;
     }
-    p {
-      text-align: justify;
-    }
     i {
       color: $pink;
       padding-bottom: 10px;
-    }
-    h2 {
-      color: white;
     }
     span {
       color: white;
@@ -296,13 +307,28 @@ header {
 }
 /* Footer */
 footer {
-  padding-top: 150px;
-  text-align: center;
+  .content-wrapper {
+    padding: 50px 0px;
+    text-align: center;
+  }
   .social-media {
     display: flex;
     margin: 0 auto;
     justify-content: space-around;
     width: 30%;
+  }
+  span {
+    color: $sea-green;
+  }
+  .social-media {
+    margin-top: 40px;
+  }
+  i {
+    color: $sea-green;
+  }
+  i:hover {
+    color: black;
+    transition: 2s color;
   }
 }
 
