Added tablet styles

--- a/css/main.css
+++ b/css/main.css
@@ -266,15 +266,15 @@ footer i:hover {
   color: black;
   transition: 2s color; }
 
-/* Desktop Styles */
-@media (min-width: 1200px) {
+/* Tablet Styles */
+@media (min-width: 768px) {
   /* Navigation */
   header .content-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 0px;
-    width: 40%; }
+    width: 50%; }
 
   nav ul li {
     display: inline-block;
@@ -315,7 +315,11 @@ footer i:hover {
     text-align: center; }
     #services .services-content article {
       padding-bottom: 100px;
-      width: 40%; } }
+      width: 40%; }
+
+  footer {
+    margin: 0 auto;
+    width: 60%; } }
 /* ==========================================================================
    Helper classes
    ========================================================================== */
