--- a/css/main.css
+++ b/css/main.css
@@ -150,8 +150,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0px;
-    width: 60%; }
+    padding: 20px 0px; }
   header nav ul li {
     list-style-type: none; }
   header nav ul a {
@@ -273,12 +272,16 @@ footer i:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0px;
-    width: 50%; }
+    padding: 20px 0px; }
 
   nav ul li {
     display: inline-block;
-    list-style-type: none; }
+    list-style-type: none;
+    padding-left: 10px; }
+
+  /* Hero */
+  #hero p {
+    width: 60%; }
 
   /* My Portfolio */
   #my-work .work-container {
@@ -317,8 +320,14 @@ footer i:hover {
       padding-bottom: 100px;
       width: 40%; }
 
+  /* Footer */
   footer {
     margin: 0 auto;
+    width: 60%; } }
+/* Desktop Styles */
+@media (min-width: 1200px) {
+  /* Hero */
+  #hero p {
     width: 60%; } }
 /* ==========================================================================
    Helper classes
