--- a/css/main.scss
+++ b/css/main.scss
@@ -179,7 +179,6 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px 0px;
-  width: 60%;
   }
   nav ul {
     li {
@@ -341,13 +340,17 @@ footer {
     justify-content: space-between;
     align-items: center;
     padding: 20px 0px;
-    width: 50%;
     }
     nav ul {
       li {
         display: inline-block;
         list-style-type: none;
+        padding-left: 10px;
       }
+  }
+  /* Hero */
+  #hero p {
+    width: 60%;
   }
   /* My Portfolio */
   #my-work {
@@ -400,8 +403,17 @@ footer {
       }
     }
   }
+  /* Footer */
   footer {
     margin: 0 auto;
+    width: 60%;
+  }
+}
+
+/* Desktop Styles */
+@media (min-width: 1200px) {
+  /* Hero */
+  #hero p {
     width: 60%;
   }
 }
